--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
 
       <button type="submit">Send</button>
     </form>
-    <p>Or WhatsApp us at <strong>+91-XXXXXXXXXX</strong></p>
-  </section>
+    <p>📞 WhatsApp / Call: <strong>+91-9219354010</strong></p>
+    <p>📧 Email: <strong><a href="mailto:racpl.ravendra@gmail.com">racpl.ravendra@gmail.com</a></strong></p>
+    </section>
 
   <footer>
     <p>&copy; 2025 ABB Automation Virtual Training Centre</p>
