--- a/index.html
+++ b/index.html
@@ -4,76 +4,231 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ABB Automation Virtual Training Centre</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background: #f7f7f7;
-      color: #333;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
-    header {
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f4f9ff;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Navigation Bar */
+    nav {
       background: #003366;
       color: white;
-      padding: 50px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    nav h1 {
+      font-size: 1.4em;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #ffcc00;
+    }
+
+    header {
+      background: linear-gradient(135deg, #003366, #005580);
+      color: white;
+      padding: 70px 20px;
       text-align: center;
     }
+
+    header h1 {
+      font-size: 2.8em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+    }
+
     .cta-button {
       display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
+      padding: 12px 25px;
       background: #ffcc00;
       color: #003366;
       text-decoration: none;
       font-weight: bold;
-      border-radius: 5px;
+      border-radius: 30px;
+      transition: all 0.3s ease-in-out;
     }
+
+    .cta-button:hover {
+      background: #e6b800;
+      transform: translateY(-2px);
+    }
+
     section {
-      padding: 40px 20px;
+      padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
       background: white;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
     }
+
     h2 {
       color: #003366;
-    }
-    .course {
+      font-size: 2em;
       margin-bottom: 20px;
-      padding: 15px;
+    }
+
+    .course {
       background: #e6f2ff;
       border-left: 5px solid #003366;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
     }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+      font-size: 1.1em;
+      display: flex;
+      align-items: center;
+    }
+
+    ul li::before {
+      content: '✅';
+      margin-right: 10px;
+      color: green;
+    }
+
     form input, form textarea {
-      display: block;
       width: 100%;
+      padding: 12px;
       margin-bottom: 15px;
-      padding: 10px;
-      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1em;
     }
+
     form button {
-      padding: 10px 20px;
       background: #003366;
       color: white;
       border: none;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 1em;
       cursor: pointer;
-      font-weight: bold;
+      transition: background 0.3s ease;
     }
+
+    form button:hover {
+      background: #002244;
+    }
+
     footer {
       background: #003366;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 30px 20px;
+      font-size: 0.9em;
     }
-    ul {
-      list-style-type: ✅;
-      padding-left: 20px;
+
+    footer a {
+      color: #ffcc00;
+      margin: 0 8px;
+      text-decoration: none;
+    }
+
+    /* Floating WhatsApp */
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 999;
+    }
+
+    .whatsapp-float img {
+      width: 55px;
+      height: 55px;
+    }
+
+    /* Payment Buttons */
+    .payments {
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      margin-top: 15px;
+    }
+
+    .payments a {
+      display: inline-block;
+      background: #ffcc00;
+      color: #003366;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .payments a:hover {
+      background: #e6b800;
+    }
+
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        gap: 10px;
+      }
+      header h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.6em;
+      }
     }
   </style>
 </head>
 <body>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <h1>ABB Training</h1>
+    <ul>
+      <li><a href="#about">Why Us</a></li>
+      <li><a href="#courses">Courses</a></li>
+      <li><a href="#webinar">Webinar</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
   <header>
     <h1>ABB Automation Virtual Training Centre</h1>
@@ -84,10 +239,10 @@
   <section id="about">
     <h2>Why Train With Us?</h2>
     <ul>
-      <li>🔧 Hands-on training with ABB 800xA, AC500, and Control Builder</li>
-      <li>👨‍🏫 Learn from certified automation experts</li>
-      <li>🎓 Certificate of Completion for each course</li>
-      <li>🌐 100% online with live or self-paced options</li>
+      <li>Hands-on training with ABB 800xA, AC500, and Control Builder</li>
+      <li>Learn from certified automation experts</li>
+      <li>Certificate of Completion for each course</li>
+      <li>100% online with live or self-paced options</li>
     </ul>
   </section>
 
@@ -105,12 +260,18 @@
       <h3>SCADA Integration & Troubleshooting</h3>
       <p>Connect and configure SCADA with real-time diagnostics, alarms, and trends.</p>
     </div>
+
+    <!-- Payment Buttons -->
+    <div class="payments">
+      <a href="https://rzp.io/l/your-link" target="_blank">Pay with Razorpay</a>
+      <a href="https://www.paypal.com/paypalme/yourlink" target="_blank">Pay with PayPal</a>
+    </div>
   </section>
 
   <section id="webinar">
     <h2>Join Our Free Intro Webinar</h2>
     <p>Next Session: <strong>May 5, 2025</strong> | Topic: “Introduction to ABB DCS”</p>
-    <a href="#contact" class="cta-button">Register Now</a>
+    <a href="https://us02web.zoom.us/meeting/register/your-link" target="_blank" class="cta-button">Register on Zoom</a>
   </section>
 
   <section id="contact">
@@ -129,12 +290,21 @@
     </form>
     <p>📞 WhatsApp / Call: <strong>+91-9219354010</strong></p>
     <p>📧 Email: <strong><a href="mailto:racpl.ravendra@gmail.com">racpl.ravendra@gmail.com</a></strong></p>
-    </section>
+  </section>
 
   <footer>
     <p>&copy; 2025 ABB Automation Virtual Training Centre</p>
-    <p>Follow us: LinkedIn | YouTube | Instagram</p>
+    <p>Follow us:
+      <a href="#">LinkedIn</a> |
+      <a href="#">YouTube</a> |
+      <a href="#">Instagram</a>
+    </p>
   </footer>
+
+  <!-- Floating WhatsApp -->
+  <a href="https://wa.me/919219354010" class="whatsapp-float" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp Chat">
+  </a>
 
 </body>
 </html>
